Maven Support Add Maven support, somebody will have to submit to central :) Set version to 1.0 as in some places said it was 2.0 in others 1.0 Removed duplicated classes from sample project

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ local.properties
 # Eclipse project files
 .classpath
 .project
+# IntelliJ project files
+*.iml
+*.ipr
+*.iws
 
 # Package Files #
 *.war
