--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,10 @@ bin/
 gen/
 
 # Local configuration file (sdk path, etc)
-local.properties
 
 # Eclipse project files
 .classpath
+.project
 # IntelliJ project files
 *.iml
 *.ipr
