--- a/SlidingLayerSample/build.gradle
+++ b/SlidingLayerSample/build.gradle
@@ -1,11 +1,7 @@
-apply plugin: 'android'
-
-dependencies {
-    compile project(':Library')
-}
+apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 18
+    compileSdkVersion 21
     buildToolsVersion '19.1.0'
 
     sourceSets {
@@ -15,4 +11,8 @@ android {
             res.srcDirs = ['res']
         }
     }
+}
+
+dependencies {
+    compile project(':Library')
 }
