--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 }
 
 allprojects {
-    group = 'com.6wunderkinder.slidinglayerlibrary'
+    group = 'com.wunderkinder.slidinglayerlibrary'
     version = '1.1-SNAPSHOT'
 
     repositories {
