--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 
 allprojects {
     group = 'com.wunderkinder.slidinglayerlibrary'
-    version = '1.1-SNAPSHOT'
+    version = '1.1'
 
     repositories {
         mavenCentral()
