--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ buildscript {
 }
 
 allprojects {
-    group = 'com.wunderkinder.slidinglayerlibrary'
-    version = '1.1'
+    group = 'com.wunderlist.slidinglayer'
+    version = '1.1.1'
 
     repositories {
         mavenCentral()
