Updated version name and added comment

--- a/SlidingLayerSample/build.gradle
+++ b/SlidingLayerSample/build.gradle
@@ -8,11 +8,13 @@ android {
         minSdkVersion 8
         targetSdkVersion 22
         versionCode 1
-        versionName "1.1.1"
+        versionName "1.2.0"
     }
 }
 
 dependencies {
+    //This is what you should use if you want to use the library from jcenter/mavencentral
+    //The other alternative is valid if you have the library as a project
     //compile 'com.wunderlist:sliding-layer:1.1.1'
     compile project(':Library')
 }
