--- a/SlidingLayerSample/build.gradle
+++ b/SlidingLayerSample/build.gradle
@@ -7,20 +7,21 @@ android {
         targetCompatibility JavaVersion.VERSION_1_7
     }
 
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.0"
 
     defaultConfig {
         minSdkVersion 8
-        targetSdkVersion 22
-        versionCode 1
-        versionName "1.2.0"
+        targetSdkVersion 23
+        versionCode 2
+        versionName "1.2.5"
     }
 }
 
 dependencies {
     //This is what you should use if you want to use the library from jcenter/mavencentral
     //The other alternative is valid if you have the library as a project
-    //compile 'com.wunderlist:sliding-layer:1.1.1'
+    //compile 'com.wunderlist:sliding-layer:1.2.5'
     compile project(':Library')
+    compile 'com.android.support:appcompat-v7:23.0.0'
 }
