No need for versionCode and versionName here

--- a/SlidingLayerSample/src/main/AndroidManifest.xml
+++ b/SlidingLayerSample/src/main/AndroidManifest.xml
@@ -21,9 +21,7 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.wunderlist.slidinglayersample"
-          android:versionCode="2"
-          android:versionName="1.5">
+          package="com.wunderlist.slidinglayersample">
 
     <application
             android:allowBackup="true"
