--- a/SlidingLayerSample/src/main/AndroidManifest.xml
+++ b/SlidingLayerSample/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.wunderlist.slidinglayersample">
+          package="com.slidinglayersample">
 
     <application
             android:allowBackup="true"
