--- a/SlidingLayerSample/build.gradle
+++ b/SlidingLayerSample/build.gradle
@@ -18,4 +18,5 @@ android {
 dependencies {
     compile project(':Library')
     compile 'com.android.support:appcompat-v7:23.0.1'
+    implementation 'com.android.support:recyclerview-v7:23.4.0'
 }
