--- a/SlidingLayerSample/build.gradle
+++ b/SlidingLayerSample/build.gradle
@@ -6,7 +6,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_7
     }
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '28.0.3'
     defaultConfig {
         minSdkVersion 8
         targetSdkVersion 23
@@ -16,6 +16,6 @@ android {
 }
 
 dependencies {
-    compile project(':Library')
-    compile 'com.android.support:appcompat-v7:23.0.1'
+    implementation project(':Library')
+    implementation 'com.android.support:appcompat-v7:23.0.1'
 }
