--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,21 @@ apply plugin: 'android-reporting'
 buildscript {
 
     repositories {
+        google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:4.0.1'
     }
 }
 
 allprojects {
     group = 'com.wunderlist.slidinglayer'
     version = '1.2.5'
+
+    repositories {
+        google()
+        jcenter()
+    }
 }
